--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
   "author": "hehehe",
   "license": "MIT",
   "engines": {
-    "yarn": "^0.14.0",
-    "node": "21.1.0"
+    "yarn": "^0.14.0"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "start:watch": "node --watch src/index"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "archiver": "^6.0.1",
