--- a/web-app/package.json
+++ b/web-app/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^1.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "webtorrent": "^2.1.27"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
